samples/_failures_safe/1761405773_d2afd3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_66423e6c.c: In function ‘main’:
./samples/SAFE/__tmp_66423e6c.c:174:9: error: expected declaration or statement at end of input
  174 |         fprintf(stderr, "Error reading input\n");
      |         ^~~~~~~
./samples/SAFE/__tmp_66423e6c.c:174:9: error: expected declaration or statement at end of input
